--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^23.0.0",
+    "lucide-react": "^0.473.0",
+    "next": "^14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.0.0",
-    "tailwindcss": "^3.3.0",
     "react-i18next": "^13.0.0",
-    "i18next": "^23.0.0"
+    "tailwindcss": "^3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
